--- a/client/css/index.css
+++ b/client/css/index.css
@@ -6,6 +6,14 @@ dl {
 dd {
 	-webkit-margin-start: 0;
 }
+ul
+{
+	-webkit-margin-before:0;
+	-webkit-margin-after:0;
+	-webkit-padding-start:0;
+	padding:0.5rem;
+	padding-left:1.5rem;
+}
 html,
 body,
 main {
@@ -44,6 +52,10 @@ input::-webkit-input-placeholder {
 	height:100%;
 	position:fixed;
 	width:100%;
+}
+.banner
+{
+	display:flex;
 }
 header
 {
@@ -94,21 +106,15 @@ header
 	width:2rem;
 }
 /*state*/
+[hidden]
+{
+	display:none !important;
+}
 ::selection {
 	background: #f93;
 }
 ::-moz-selection {/*remove if not using FF!!*/
 	background: #f93;
-}
-button:hover
-{
-	cursor:pointer;
-}
-button:focus
-{
-	outline:none;
-	transition:opacity 0.2s;
-	opacity:0.5;
 }
 input:focus
 {
