--- a/client/css/index.css
+++ b/client/css/index.css
@@ -47,6 +47,11 @@ input::-webkit-input-placeholder {
 	text-indent: 0.5rem;
 }
 /*module*/
+.logo
+{
+	height:2.5rem;
+	margin:0.3rem;
+}
 .modal
 {
 	height:100%;
@@ -56,6 +61,10 @@ input::-webkit-input-placeholder {
 .banner
 {
 	display:flex;
+}
+.banner__desc
+{
+	flex-grow:2;
 }
 header
 {
