--- a/client/css/index.css
+++ b/client/css/index.css
@@ -1,50 +1,20 @@
 /*base*/
-dl {
-	-webkit-margin-before: 0;
-	-webkit-margin-after: 0;
-}
-dd {
-	-webkit-margin-start: 0;
-}
-ul
-{
-	-webkit-margin-before:0;
-	-webkit-margin-after:0;
-	-webkit-padding-start:0;
-	padding:0.5rem;
-	padding-left:1.5rem;
-}
-html,
-body,
-main {
-	font-family: sans-serif;
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	width: 100%;
-}
-body {
-	display: flex;
-}
+@import 'reset.css';
+@import 'base.css';
+/*modules*/
+@import 'header-footer.css';
 /*layout*/
-header {
-	height: 3rem;
-}
 .table {
 	height: calc(100% - 3rem);
 }
 .col {
 	display: flex;
 	margin: 0.5rem;
-	
 }
 .row {
 	display: flex;
 	flex-wrap:wrap;
 	width: 100%;
-}
-input::-webkit-input-placeholder {
-	text-indent: 0.5rem;
 }
 /*module*/
 .logo
@@ -65,10 +35,6 @@ input::-webkit-input-placeholder {
 .banner__desc
 {
 	flex-grow:2;
-}
-header
-{
-	background-color: #5e8d46;
 }
 .search {
 	border: 0;
@@ -100,30 +66,10 @@ header
 	/*Is this useful?!! Rationale: the eye can only count to four, these lines help break up the chunks so that rows are easier to distinguish. More info at: https://www.youtube.com/watch?v=z4ikTCTAAHU&index=15&list=PL322BE87D5C05D1E9*/
 	border-bottom: 0.1rem solid #222;
 }
-.floating-action
-{
-	border-radius:50%;
-	background-color:#45742D;
-	border:0.2rem;
-	bottom:1rem;
-	box-shadow:0 0 0.2rem #000;
-	color:#fff;
-	font-weight:bold;
-	height:2rem;
-	position:fixed;
-	right:1rem;
-	width:2rem;
-}
 /*state*/
 [hidden]
 {
 	display:none !important;
-}
-::selection {
-	background: #f93;
-}
-::-moz-selection {/*remove if not using FF!!*/
-	background: #f93;
 }
 input:focus
 {
@@ -135,7 +81,7 @@ input:focus
 	/*small*/
 .main {
 	background-color:#f8f8f8;
-	height: calc(100% - 9rem);
+	height: calc(100% - 10.5rem);
 	overflow-x: hidden;
 	overflow-y: scroll;
 	width: 100%;
@@ -149,7 +95,7 @@ header {
 @media only screen and (min-width : 768px) {
 	/*medium*/
 	.main {
-		height: calc(100% - 6rem);
+		height: calc(100% - 7.5rem);
 	}
 	header {
 		height: 6rem;
@@ -161,7 +107,7 @@ header {
 	/*large*/
 @media only screen and (min-width : 1200px) {
 	.main {
-		height: calc(100% - 3rem);
+		height: calc(100% - 4.5rem);
 	}
 	header {
 		height: 3rem;
