--- a/client/css/base.css
+++ b/client/css/base.css
@@ -13,6 +13,32 @@ body {
 ::selection {
 	background: #f93;
 }
-::-moz-selection {/*remove if not using FF!!*/
+::-moz-selection {
 	background: #f93;
+}
+dl {
+	-webkit-margin-before: 0;
+	-webkit-margin-after: 0;
+}
+dd {
+	-webkit-margin-start: 0;
+}
+input::-webkit-input-placeholder {
+	text-indent: 0.5rem;
+}
+ul {
+	-webkit-margin-before:0;
+	-webkit-margin-after:0;
+	-webkit-padding-start:0;
+	padding:0.5rem;
+	padding-left:1.5rem;
+}
+/*state*/
+[hidden]
+{
+	display:none !important;
+}
+input:focus
+{
+	outline:none;
 }
