--- a/client/css/base.css
+++ b/client/css/base.css
@@ -23,6 +23,12 @@ dl {
 dd {
 	-webkit-margin-start: 0;
 }
+input {
+	border: 0;
+	border-radius: 0;
+	padding: 0;
+}
+
 input::-webkit-input-placeholder {
 	text-indent: 0.5rem;
 }
